# shingine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  shingine.sln  shingine.vcxproj  shingine.vcxproj.filters
Assets/Scenes/: Crysis_City.ssd  Grids.ssd  SingleObject.ssd  Test.ssd  TestScene.ssd  building.ssd  test.ssd  test0.ssd  test2.ssd  test_external.ssd
Assets/Shaders/: AlbedoDrawer.frag  AlbedoDrawer.vert  SimpleLighting.frag  SimpleLighting.vert  Unlit.frag  Unlit.vert  default.frag  default.vert
Extra/: houdini_scene_exporter_tool.py
Include/: Core.h
Include/Application/: Prototyping.h  Setup.h
Include/Engine/: CComponent.h  CEntity.h  CObject.h  Common.h  Entity.h  IComponent.h  IObject.h
Include/Game/: LightViewerSystem.h  SceneSwitchingSystem.h
Include/Solver/: CSolver.h  CSolver_Impl.h  Solver.h  Solver_Impl.h
Include/Systems/: CPlayerControllerSystem.h  CRenderingSystem.h  CSystem.h  CTransformSystem.h  ISystem.h  RenderingSystem.h  System.h  TransformSystem.h
Include/Utility/: Common.h  Typedefs.h
Scripts/: houdini_scene_exporter_tool.py
Scripts/Houdini/: README.md
Scripts/ShingineSceneExporterUnity/: BinaryConverter.cs  Constants.cs  Main.cs  NodeUtils.cs
Source/: App.cpp  Core.h  Source.sln  Source.vcxproj  Source.vcxproj.filters
Source/App/: App.cpp
Source/Application/: App.cpp  Setup.cpp
Source/Components/: CComponent.cpp  CComponent.h  CComponentBuilder.cpp  CComponentBuilder.h  CLightComponent.cpp  CLightComponent.h  CMaterialComponent.cpp  CMaterialComponent.h  CMeshComponent.cpp  Common.h  (+10 more)
src/: src.sln  src.vcxproj
(+288 files in other folders)
